// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationPreferences/> _setControlTicketVolume() should update the control ticket volume in the state. 1`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "avatar": {
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "optional",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _setControlTicketVolume() should update the control ticket volume in the state. 2`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "avatar": {
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": true,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "optional",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "control-ticket-volume",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _setDisplayCampaignsChatHidden() should update the display campaigns with hidden chat in the state. 1`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "avatar": {
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "optional",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _setDisplayCampaignsChatHidden() should update the display campaigns with hidden chat in the state. 2`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "avatar": {
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": true,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "optional",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _setLinkedEmailIntegration() should update the linked email integration in the state. 1`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "avatar": {
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "optional",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _setLinkedEmailIntegration() should update the linked email integration in the state. 2`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "avatar": {
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "optional",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": 234,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _submitPreferences() should submit the form with defaults 1`] = `
[MockFunction] {
  "calls": [
    [
      Immutable.Map {
        "id": undefined,
        "meta": Immutable.Map {
          "language": "en-US",
          "shop_integration_id": 1,
          "preferences": Immutable.Map {
            "email_capture_enforcement": "optional",
            "hide_on_mobile": false,
            "email_capture_enabled": true,
            "send_chat_transcript": true,
            "hide_outside_business_hours": false,
            "control_ticket_volume": false,
            "linked_email_integration": null,
            "live_chat_availability": "auto-based-on-agent-availability",
            "auto_responder": Immutable.Map {
              "enabled": true,
              "reply": "reply-dynamic",
            },
            "privacy_policy_disclaimer_enabled": false,
            "display_campaigns_hidden_chat": false,
            "offline_mode_enabled_datetime": null,
          },
        },
        "deactivated_datetime": null,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _submitPreferences() should submit the form with loaded values 1`] = `
[MockFunction] {
  "calls": [
    [
      Immutable.Map {
        "id": 1,
        "meta": Immutable.Map {
          "preferences": Immutable.Map {
            "email_capture_enforcement": "optional",
            "hide_on_mobile": false,
            "email_capture_enabled": true,
            "send_chat_transcript": true,
            "hide_outside_business_hours": false,
            "control_ticket_volume": false,
            "linked_email_integration": null,
            "live_chat_availability": "auto-based-on-agent-availability",
            "auto_responder": Immutable.Map {
              "enabled": false,
              "reply": "reply-in-minutes",
            },
            "privacy_policy_disclaimer_enabled": false,
            "display_campaigns_hidden_chat": false,
            "offline_mode_enabled_datetime": null,
          },
          "shop_integration_id": 1,
          "language": "en-US",
        },
        "deactivated_datetime": null,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<GorgiasChatIntegrationPreferences/> componentDidMount() should initialize the state using the integration passed 1`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-in-minutes",
  "avatar": {
    "companyLogoUrl": undefined,
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "always-required",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": true,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> componentDidUpdate() should initialize the state using the integration passed because the state was not initialized yet and the integration passed is not empty 1`] = `
{
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-in-minutes",
  "avatar": {
    "companyLogoUrl": undefined,
    "imageType": "agent-picture",
    "nameType": "agent-first-name",
  },
  "controlTicketVolume": false,
  "displayCampaignsHiddenChat": false,
  "emailCaptureEnabled": true,
  "emailCaptureEnforcement": "always-required",
  "hide": false,
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": true,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "live-chat-availability",
  "privacyPolicyDisclaimerEnabled": false,
  "privacyPolicyDisclaimerText": undefined,
  "sendChatTranscript": true,
  "texts": {
    "cz": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "da": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "de": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-GB": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "en-US": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "es": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fi": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-CA": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "fr-FR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "it": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "ja": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "nl": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "no": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "pt-BR": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
    "sv": {
      "meta": {},
      "sspTexts": {},
      "texts": {},
    },
  },
  "translations": undefined,
}
`;

exports[`<GorgiasChatIntegrationPreferences/> render() should render buttons in loading state because preferences are being submitted 1`] = `
<Fragment>
  <NavigatedSuccessModal
    buttonLabel="See Chat Settings"
    icon="party-popper"
    name="gorgias-chat-auto-installation"
  >
    <div
      className="heading-page-semibold mb-2"
    >
      All set!
    </div>
    <div
      className="heading-subsection-regular"
    >
      Your chat is now available on your website.
    </div>
  </NavigatedSuccessModal>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          />
        </Breadcrumb>
      }
    >
      <Component
        integration={
          Immutable.Map {
            "id": 2,
            "type": "gorgias_chat",
            "meta": Immutable.Map {
              "language": "en-US",
              "shop_integration_id": 1,
            },
            "decoration": Immutable.Map {
              "main_color": "#789c5d",
              "conversation_color": "#08d123",
            },
          }
        }
      />
    </PageHeader>
    <Component
      integration={
        Immutable.Map {
          "id": 2,
          "type": "gorgias_chat",
          "meta": Immutable.Map {
            "language": "en-US",
            "shop_integration_id": 1,
          },
          "decoration": Immutable.Map {
            "main_color": "#789c5d",
            "conversation_color": "#08d123",
          },
        }
      }
    />
    <GorgiasChatIntegrationPreviewContainer
      preview={
        <ChatIntegrationPreview
          autoResponderEnabled={false}
          autoResponderReply="reply-dynamic"
          avatar={
            {
              "companyLogoUrl": undefined,
              "imageType": "agent-picture",
              "nameType": "agent-first-name",
            }
          }
          backgroundColorStyle="gradient"
          displayBotLabel={true}
          isOnline={true}
          language="en-US"
          mainColor="#789c5d"
          mainFontFamily="Inter"
          position={
            {
              "alignment": "bottom-right",
              "offsetX": 0,
              "offsetY": 0,
            }
          }
          privacyPolicyDisclaimerText="By using this chat, you consent to our Privacy Policy."
          renderFooter={true}
          renderPoweredBy={false}
          renderPrivacyPolicyDisclaimer={false}
          useMainColorOutsideBusinessHours={false}
        >
          <ChatIntegrationPreviewContent>
            <CustomerInitialMessages
              conversationColor="#08d123"
              hideConversationTimestamp={true}
              messages={
                [
                  "Hi, could you give me an update on my order status?",
                ]
              }
            />
            <AutoResponder
              autoResponderReply="reply-dynamic"
              isEmailCaptureEnabled={true}
              language="en-US"
            />
          </ChatIntegrationPreviewContent>
        </ChatIntegrationPreview>
      }
    >
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Live chat
            </h4>
            <div>
              <p
                className="mb-4"
              >
                Choose when customers can send live chat messages to your team during
                 
                <Link
                  to="/app/settings/business-hours"
                >
                  business hours
                </Link>
                .
                 
              </p>
              <RadioFieldSet
                className="mb-3 radioFieldSet"
                onChange={[Function]}
                options={
                  [
                    {
                      "caption": "Customers can only send live chat messages when an agent is available in Gorgias",
                      "label": "Live when agents are available",
                      "value": "auto-based-on-agent-availability",
                    },
                    {
                      "caption": "Customers can always send live chat messages during business hours",
                      "label": "Always live during business hours",
                      "value": "always-live-during-business-hours",
                    },
                    {
                      "caption": "Customers can only send messages using the contact form",
                      "label": "Offline",
                      "value": "offline",
                    },
                  ]
                }
                selectedValue="auto-based-on-agent-availability"
              />
              <p
                className="mb-3"
              >
                Automate features are always available, if enabled. When live chat is unavailable, customers can message your team with
                 
                <a
                  href="https://docs.gorgias.com/en-US/gorgias-chat---contact-form-88573"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  contact form
                </a>
                 
                to receive an email response.
                 
                Live chat is always unavailable outside business hours.
              </p>
            </div>
          </div>
          <ControlTicketVolumeControls
            articleRecommendationEnabled={true}
            integration={
              Immutable.Map {
                "id": 2,
                "type": "gorgias_chat",
                "meta": Immutable.Map {
                  "language": "en-US",
                  "shop_integration_id": 1,
                },
                "decoration": Immutable.Map {
                  "main_color": "#789c5d",
                  "conversation_color": "#08d123",
                },
              }
            }
            isToggled={false}
            onToggle={[Function]}
            selfServiceConfiguration={null}
          />
          <div
            className="formSection"
          >
            <h4
              className="title"
            >
              Visibility options
            </h4>
            <div
              className="formGroup d-flex"
            >
              <ToggleInput
                aria-label="Hide chat"
                isToggled={false}
                onClick={[Function]}
              />
              <div
                className="toggleInfo ml-1"
              >
                <b>
                  Hide chat
                </b>
                <span
                  className="tooltipIcon"
                  id="hide-chat-help"
                >
                  <i
                    className="material-icons-outlined"
                  >
                    error_outline
                  </i>
                </span>
                <Tooltip
                  autohide={false}
                  delay={100}
                  innerProps={
                    {
                      "style": {
                        "textAlign": "left",
                      },
                    }
                  }
                  placement="top-start"
                  target="hide-chat-help"
                >
                  <div
                    className="mb-3"
                  >
                    Hiding chat removes the widget from your website, but doesn't uninstall it.
                  </div>
                  If you're getting too many live chat messages, you can change your live chat settings above.
                </Tooltip>
                <div
                  className="form-text text-muted"
                >
                  Remove widget from your website without uninstalling it
                </div>
              </div>
            </div>
            <div
              className="formGroup d-flex"
            >
              <ToggleInput
                isToggled={false}
                onClick={[Function]}
              />
              <div
                className="toggleInfo ml-1"
              >
                <b>
                  Hide outside of business hours
                </b>
                <span
                  className="tooltipIcon"
                  id="hide-outside-business-hours-help"
                >
                  <i
                    className="material-icons-outlined"
                  >
                    info
                  </i>
                </span>
                <Tooltip
                  arrowClassName="tooltip-arrow"
                  innerProps={
                    {
                      "innerClassName": "tooltip-inner",
                      "popperClassName": "tooltip",
                    }
                  }
                  placement="top-start"
                  target="hide-outside-business-hours-help"
                >
                  Customers with active conversations will be notified 30 minutes before the chat is hidden.
                </Tooltip>
                <div
                  className="form-text text-muted"
                >
                  Remove widget from your website after business hours
                </div>
              </div>
            </div>
            <div
              className="formGroup d-flex"
            >
              <ToggleInput
                isToggled={false}
                onClick={[Function]}
              />
              <div
                className="toggleInfo ml-1"
              >
                <b>
                  Hide on mobile
                </b>
              </div>
            </div>
          </div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Email capture
            </h4>
            <p
              className="mb-4"
            >
              Collecting customer emails helps grow your email list and send follow-up messages. However, only around 30% of customers will send a message if they must provide an email.
            </p>
            <div
              className="mb-4 d-flex align-items-center"
            >
              <ToggleInput
                isToggled={true}
                name="disable-email-capture-toggle"
                onClick={[Function]}
              >
                <b>
                  Enable email capture
                </b>
              </ToggleInput>
            </div>
            <RadioFieldSet
              isDisabled={false}
              onChange={[Function]}
              options={
                [
                  {
                    "label": "Optional",
                    "value": "optional",
                  },
                  {
                    "label": "Required",
                    "value": "always-required",
                  },
                ]
              }
              selectedValue="optional"
            />
          </div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Auto-reply with wait time
            </h4>
            <p
              className="mb-4"
            >
              During
               
              <Link
                to="/app/settings/business-hours"
              >
                business hours
              </Link>
              , let customers know how fast they can expect a response with an auto-reply. A message is sent in new chat tickets after 30 seconds without replies from an agent.
            </p>
            <div
              className="mb-4 d-flex align-items-center"
            >
              <ToggleInput
                isToggled={true}
                onClick={[Function]}
              />
              <div
                className="ml-1"
              >
                <b>
                  Send auto-reply with wait time
                </b>
              </div>
            </div>
            <div
              className="mb-3"
            >
              <RadioFieldSet
                className="mb-2 radioFieldSet"
                isDisabled={false}
                onChange={[Function]}
                options={
                  [
                    {
                      "label": <div>
                        Dynamic wait time (recommended)
                        <span
                          className="tooltipIcon"
                          id="dynamic-wait-time-option"
                        >
                          <i
                            className="material-icons"
                          >
                            info_outline
                          </i>
                        </span>
                        <Tooltip
                          autohide={false}
                          placement="top"
                          target="dynamic-wait-time-option"
                        >
                          Calculated based on your team's recent live chat response times.
                           
                          <a
                            href="https://docs.gorgias.com/en-US/109858-dc67e62b040a4649aed68bdce7ffa4f5"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            Learn more
                          </a>
                        </Tooltip>
                        <p
                          className="dynamicDescription"
                        >
                          Customers can only send live chat messages when an agent is available in Gorgias
                        </p>
                      </div>,
                      "value": "reply-dynamic",
                    },
                    {
                      "label": "In a few minutes",
                      "value": "reply-in-minutes",
                    },
                    {
                      "label": "In a few hours",
                      "value": "reply-in-hours",
                    },
                  ]
                }
                selectedValue="reply-dynamic"
              />
            </div>
          </div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Forward chat replies to customer emails
            </h4>
            <p
              className="mb-3"
            >
              When customers don't see your live chat response after an hour, Gorgias will automatically send your message to the customer's email address (if available). Customers also receive satisfaction surveys for chat tickets via email.
            </p>
            <Label
              className="control-label"
              for="linkedEmailIntegration"
              tag="label"
              widths={
                [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Select which email address sends these messages
            </Label>
            <SelectField
              allowCustomValue={false}
              fixedWidth={false}
              fullWidth={true}
              id={null}
              isSearchable={true}
              onChange={[Function]}
              onSearchChange={[Function]}
              options={[]}
              placeholder="Select an email integration"
              required={false}
              singular="option"
              style={{}}
              value={null}
            />
          </div>
        </div>
        <ForwardRef(Button)
          isDisabled={true}
          isLoading={true}
          type="submit"
        >
          Save Changes
        </ForwardRef(Button)>
      </Form>
    </GorgiasChatIntegrationPreviewContainer>
  </div>
</Fragment>
`;

exports[`<GorgiasChatIntegrationPreferences/> render() should render the Chat preferences 1`] = `
<Fragment>
  <NavigatedSuccessModal
    buttonLabel="See Chat Settings"
    icon="party-popper"
    name="gorgias-chat-auto-installation"
  >
    <div
      className="heading-page-semibold mb-2"
    >
      All set!
    </div>
    <div
      className="heading-subsection-regular"
    >
      Your chat is now available on your website.
    </div>
  </NavigatedSuccessModal>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          />
        </Breadcrumb>
      }
    >
      <Component
        integration={
          Immutable.Map {
            "id": 2,
            "type": "gorgias_chat",
            "meta": Immutable.Map {
              "language": "en-US",
              "shop_integration_id": 1,
            },
            "decoration": Immutable.Map {
              "main_color": "#789c5d",
              "conversation_color": "#08d123",
            },
          }
        }
      />
    </PageHeader>
    <Component
      integration={
        Immutable.Map {
          "id": 2,
          "type": "gorgias_chat",
          "meta": Immutable.Map {
            "language": "en-US",
            "shop_integration_id": 1,
          },
          "decoration": Immutable.Map {
            "main_color": "#789c5d",
            "conversation_color": "#08d123",
          },
        }
      }
    />
    <GorgiasChatIntegrationPreviewContainer
      preview={
        <ChatIntegrationPreview
          autoResponderEnabled={false}
          autoResponderReply="reply-dynamic"
          avatar={
            {
              "companyLogoUrl": undefined,
              "imageType": "agent-picture",
              "nameType": "agent-first-name",
            }
          }
          backgroundColorStyle="gradient"
          displayBotLabel={true}
          isOnline={true}
          language="en-US"
          mainColor="#789c5d"
          mainFontFamily="Inter"
          position={
            {
              "alignment": "bottom-right",
              "offsetX": 0,
              "offsetY": 0,
            }
          }
          privacyPolicyDisclaimerText="By using this chat, you consent to our Privacy Policy."
          renderFooter={true}
          renderPoweredBy={false}
          renderPrivacyPolicyDisclaimer={false}
          useMainColorOutsideBusinessHours={false}
        >
          <ChatIntegrationPreviewContent>
            <CustomerInitialMessages
              conversationColor="#08d123"
              hideConversationTimestamp={true}
              messages={
                [
                  "Hi, could you give me an update on my order status?",
                ]
              }
            />
            <AutoResponder
              autoResponderReply="reply-dynamic"
              isEmailCaptureEnabled={true}
              language="en-US"
            />
          </ChatIntegrationPreviewContent>
        </ChatIntegrationPreview>
      }
    >
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Live chat
            </h4>
            <div>
              <p
                className="mb-4"
              >
                Choose when customers can send live chat messages to your team during
                 
                <Link
                  to="/app/settings/business-hours"
                >
                  business hours
                </Link>
                .
                 
              </p>
              <RadioFieldSet
                className="mb-3 radioFieldSet"
                onChange={[Function]}
                options={
                  [
                    {
                      "caption": "Customers can only send live chat messages when an agent is available in Gorgias",
                      "label": "Live when agents are available",
                      "value": "auto-based-on-agent-availability",
                    },
                    {
                      "caption": "Customers can always send live chat messages during business hours",
                      "label": "Always live during business hours",
                      "value": "always-live-during-business-hours",
                    },
                    {
                      "caption": "Customers can only send messages using the contact form",
                      "label": "Offline",
                      "value": "offline",
                    },
                  ]
                }
                selectedValue="auto-based-on-agent-availability"
              />
              <p
                className="mb-3"
              >
                Automate features are always available, if enabled. When live chat is unavailable, customers can message your team with
                 
                <a
                  href="https://docs.gorgias.com/en-US/gorgias-chat---contact-form-88573"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  contact form
                </a>
                 
                to receive an email response.
                 
                Live chat is always unavailable outside business hours.
              </p>
            </div>
          </div>
          <ControlTicketVolumeControls
            articleRecommendationEnabled={true}
            integration={
              Immutable.Map {
                "id": 2,
                "type": "gorgias_chat",
                "meta": Immutable.Map {
                  "language": "en-US",
                  "shop_integration_id": 1,
                },
                "decoration": Immutable.Map {
                  "main_color": "#789c5d",
                  "conversation_color": "#08d123",
                },
              }
            }
            isToggled={false}
            onToggle={[Function]}
            selfServiceConfiguration={null}
          />
          <div
            className="formSection"
          >
            <h4
              className="title"
            >
              Visibility options
            </h4>
            <div
              className="formGroup d-flex"
            >
              <ToggleInput
                aria-label="Hide chat"
                isToggled={false}
                onClick={[Function]}
              />
              <div
                className="toggleInfo ml-1"
              >
                <b>
                  Hide chat
                </b>
                <span
                  className="tooltipIcon"
                  id="hide-chat-help"
                >
                  <i
                    className="material-icons-outlined"
                  >
                    error_outline
                  </i>
                </span>
                <Tooltip
                  autohide={false}
                  delay={100}
                  innerProps={
                    {
                      "style": {
                        "textAlign": "left",
                      },
                    }
                  }
                  placement="top-start"
                  target="hide-chat-help"
                >
                  <div
                    className="mb-3"
                  >
                    Hiding chat removes the widget from your website, but doesn't uninstall it.
                  </div>
                  If you're getting too many live chat messages, you can change your live chat settings above.
                </Tooltip>
                <div
                  className="form-text text-muted"
                >
                  Remove widget from your website without uninstalling it
                </div>
              </div>
            </div>
            <div
              className="formGroup d-flex"
            >
              <ToggleInput
                isToggled={false}
                onClick={[Function]}
              />
              <div
                className="toggleInfo ml-1"
              >
                <b>
                  Hide outside of business hours
                </b>
                <span
                  className="tooltipIcon"
                  id="hide-outside-business-hours-help"
                >
                  <i
                    className="material-icons-outlined"
                  >
                    info
                  </i>
                </span>
                <Tooltip
                  arrowClassName="tooltip-arrow"
                  innerProps={
                    {
                      "innerClassName": "tooltip-inner",
                      "popperClassName": "tooltip",
                    }
                  }
                  placement="top-start"
                  target="hide-outside-business-hours-help"
                >
                  Customers with active conversations will be notified 30 minutes before the chat is hidden.
                </Tooltip>
                <div
                  className="form-text text-muted"
                >
                  Remove widget from your website after business hours
                </div>
              </div>
            </div>
            <div
              className="formGroup d-flex"
            >
              <ToggleInput
                isToggled={false}
                onClick={[Function]}
              />
              <div
                className="toggleInfo ml-1"
              >
                <b>
                  Hide on mobile
                </b>
              </div>
            </div>
          </div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Email capture
            </h4>
            <p
              className="mb-4"
            >
              Collecting customer emails helps grow your email list and send follow-up messages. However, only around 30% of customers will send a message if they must provide an email.
            </p>
            <div
              className="mb-4 d-flex align-items-center"
            >
              <ToggleInput
                isToggled={true}
                name="disable-email-capture-toggle"
                onClick={[Function]}
              >
                <b>
                  Enable email capture
                </b>
              </ToggleInput>
            </div>
            <RadioFieldSet
              isDisabled={false}
              onChange={[Function]}
              options={
                [
                  {
                    "label": "Optional",
                    "value": "optional",
                  },
                  {
                    "label": "Required",
                    "value": "always-required",
                  },
                ]
              }
              selectedValue="optional"
            />
          </div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Auto-reply with wait time
            </h4>
            <p
              className="mb-4"
            >
              During
               
              <Link
                to="/app/settings/business-hours"
              >
                business hours
              </Link>
              , let customers know how fast they can expect a response with an auto-reply. A message is sent in new chat tickets after 30 seconds without replies from an agent.
            </p>
            <div
              className="mb-4 d-flex align-items-center"
            >
              <ToggleInput
                isToggled={true}
                onClick={[Function]}
              />
              <div
                className="ml-1"
              >
                <b>
                  Send auto-reply with wait time
                </b>
              </div>
            </div>
            <div
              className="mb-3"
            >
              <RadioFieldSet
                className="mb-2 radioFieldSet"
                isDisabled={false}
                onChange={[Function]}
                options={
                  [
                    {
                      "label": <div>
                        Dynamic wait time (recommended)
                        <span
                          className="tooltipIcon"
                          id="dynamic-wait-time-option"
                        >
                          <i
                            className="material-icons"
                          >
                            info_outline
                          </i>
                        </span>
                        <Tooltip
                          autohide={false}
                          placement="top"
                          target="dynamic-wait-time-option"
                        >
                          Calculated based on your team's recent live chat response times.
                           
                          <a
                            href="https://docs.gorgias.com/en-US/109858-dc67e62b040a4649aed68bdce7ffa4f5"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            Learn more
                          </a>
                        </Tooltip>
                        <p
                          className="dynamicDescription"
                        >
                          Customers can only send live chat messages when an agent is available in Gorgias
                        </p>
                      </div>,
                      "value": "reply-dynamic",
                    },
                    {
                      "label": "In a few minutes",
                      "value": "reply-in-minutes",
                    },
                    {
                      "label": "In a few hours",
                      "value": "reply-in-hours",
                    },
                  ]
                }
                selectedValue="reply-dynamic"
              />
            </div>
          </div>
          <div
            className="formSection"
          >
            <h4
              className="title mb-1"
            >
              Forward chat replies to customer emails
            </h4>
            <p
              className="mb-3"
            >
              When customers don't see your live chat response after an hour, Gorgias will automatically send your message to the customer's email address (if available). Customers also receive satisfaction surveys for chat tickets via email.
            </p>
            <Label
              className="control-label"
              for="linkedEmailIntegration"
              tag="label"
              widths={
                [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Select which email address sends these messages
            </Label>
            <SelectField
              allowCustomValue={false}
              fixedWidth={false}
              fullWidth={true}
              id={null}
              isSearchable={true}
              onChange={[Function]}
              onSearchChange={[Function]}
              options={[]}
              placeholder="Select an email integration"
              required={false}
              singular="option"
              style={{}}
              value={null}
            />
          </div>
        </div>
        <ForwardRef(Button)
          isDisabled={false}
          isLoading={false}
          type="submit"
        >
          Save Changes
        </ForwardRef(Button)>
      </Form>
    </GorgiasChatIntegrationPreviewContainer>
  </div>
</Fragment>
`;
